# adgod

./: .env.example  .env.production.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  dump.rdb  pyproject.toml  railway.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_ad_pipeline_billing.py  0003_admin_audit.py  0004_auth_otps.py  (+9 more)
docker/: python.Dockerfile
docs/: ARCHITECTURE.md  CAPABILITIES.md  COMPETITIVE.md  GAP_AUDIT.md  GO_LIVE.md  MANUAL_ONBOARDING.md  RAILWAY_DEPLOY.md  WHATSAPP_PROVIDERS.md
scripts/: dev_up.sh
tests/: conftest.py  test_ad_styles.py  test_audit_round2.py  test_bff_api.py  test_billing_details.py  test_bookings.py  test_bsp_adapter.py  test_closer_flow.py  test_connect_flow.py  test_consoles.py  test_creative_brain.py  test_creative_brief.py  test_deploy_hardening.py  test_engine_depth.py  test_golive_fixes.py  test_i18n_punjabi.py  test_launch_hardening.py  test_maintenance_tasks.py  test_money.py  test_one_stop.py  test_one_stop_vision.py  test_optimizer_parity.py  test_outbound_flows.py  test_outbox.py  test_owner_lens.py  test_partner_console.py  test_pipeline.py  test_pipeline_api.py  test_platform_role.py  test_provision_client.py  test_realtime_webhooks.py  test_resilience.py  test_rls_isolation.py  test_scope_guard.py  test_security_dpdp.py  test_security_hardening.py  test_self_serve_signup.py  test_video_provider.py  test_webhook_intake.py
web/: .env.example  Dockerfile  package-lock.json  package.json  railway.toml  tailwind.config.ts
(+141 files in other folders)
