[project]
name = "leadpilot"
version = "0.1.0"
description = "LeadPilot / Saathi — autonomous AI ad-running & lead-generation agent for Indian Tier-2 SMBs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "redis>=5.2",
    "celery>=5.4",
    "httpx>=0.28",
    "structlog>=24.4",
    "PyJWT>=2.10",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "google-generativeai>=0.8",
]
storage = [
    "boto3>=1.35",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leadpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
